--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06f8cd20691f4deba7dfc125184b8850",
+       "model_id": "5bea583d996c4b79b1c61ea216539687",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,7 +473,7 @@
        "      <th>Cloudiness</th>\n",
        "      <th>Wind Speed</th>\n",
        "      <th>Country</th>\n",
-       "      <th>Hotel Name</th>\n",
+       "      <th>Hotel_Name</th>\n",
        "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -583,7 +583,7 @@
        "360         Gambēla   8.2500   34.5833     75.99        44           0   \n",
        "458            Juba   4.8517   31.5825     72.37        24           0   \n",
        "\n",
-       "     Wind Speed Country  Hotel Name        Date  \n",
+       "     Wind Speed Country  Hotel_Name        Date  \n",
        "169        5.75      RE        True  1612061871  \n",
        "213        6.91      AU        True  1612061875  \n",
        "228        5.75      RE        True  1612061877  \n",
@@ -599,7 +599,7 @@
     }
    ],
    "source": [
-    "hotel_df.insert(8, \"Hotel Name\", True)\n",
+    "hotel_df.insert(8, \"Hotel_Name\", True)\n",
     "hotel_df"
    ]
   },
@@ -663,7 +663,7 @@
     "\n",
     "    # Since some data may be missing we incorporate a try-except to skip any that are missing a data point.\n",
     "    try:\n",
-    "        hotel_df.loc[index, \"Hotel Name\"] = name_address[\"results\"][0][\"name\"]\n",
+    "        hotel_df.loc[index, \"Hotel_Name\"] = name_address[\"results\"][0][\"name\"]\n",
     "    except (KeyError, IndexError):\n",
     "        print(\"Missing field/result... skipping.\")"
    ]
@@ -704,7 +704,7 @@
        "      <th>Cloudiness</th>\n",
        "      <th>Wind Speed</th>\n",
        "      <th>Country</th>\n",
-       "      <th>Hotel Name</th>\n",
+       "      <th>Hotel_Name</th>\n",
        "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -719,7 +719,7 @@
        "      <td>0</td>\n",
        "      <td>5.75</td>\n",
        "      <td>RE</td>\n",
-       "      <td>Le Battant Des Lames</td>\n",
+       "      <td>LODGE PALMAE</td>\n",
        "      <td>1612061871</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -732,7 +732,7 @@
        "      <td>0</td>\n",
        "      <td>6.91</td>\n",
        "      <td>AU</td>\n",
-       "      <td>The Jetty Resort</td>\n",
+       "      <td>Esperance Chalet Village</td>\n",
        "      <td>1612061875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -771,7 +771,7 @@
        "      <td>0</td>\n",
        "      <td>3.31</td>\n",
        "      <td>BR</td>\n",
-       "      <td>Rametta Hotel</td>\n",
+       "      <td>ibis Montes Claros Shopping</td>\n",
        "      <td>1612061892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -784,7 +784,7 @@
        "      <td>0</td>\n",
        "      <td>2.75</td>\n",
        "      <td>ET</td>\n",
-       "      <td>Grand Resort And Spa,Gambella</td>\n",
+       "      <td>BARO Gambella (ETHIOPIA) hotel</td>\n",
        "      <td>1612061893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -814,14 +814,14 @@
        "360         Gambēla   8.2500   34.5833     75.99        44           0   \n",
        "458            Juba   4.8517   31.5825     72.37        24           0   \n",
        "\n",
-       "     Wind Speed Country                     Hotel Name        Date  \n",
-       "169        5.75      RE           Le Battant Des Lames  1612061871  \n",
-       "213        6.91      AU               The Jetty Resort  1612061875  \n",
-       "228        5.75      RE           Les Embruns Du Baril  1612061877  \n",
-       "233        6.64      IN                           True  1612061877  \n",
-       "350        3.31      BR                  Rametta Hotel  1612061892  \n",
-       "360        2.75      ET  Grand Resort And Spa,Gambella  1612061893  \n",
-       "458        2.86      SS      Pyramid Continental Hotel  1612061904  "
+       "     Wind Speed Country                      Hotel_Name        Date  \n",
+       "169        5.75      RE                    LODGE PALMAE  1612061871  \n",
+       "213        6.91      AU        Esperance Chalet Village  1612061875  \n",
+       "228        5.75      RE            Les Embruns Du Baril  1612061877  \n",
+       "233        6.64      IN                            True  1612061877  \n",
+       "350        3.31      BR     ibis Montes Claros Shopping  1612061892  \n",
+       "360        2.75      ET  BARO Gambella (ETHIOPIA) hotel  1612061893  \n",
+       "458        2.86      SS       Pyramid Continental Hotel  1612061904  "
       ]
      },
      "execution_count": 11,
@@ -844,7 +844,7 @@
     "# Using the template add the hotel marks to the heatmap\n",
     "info_box_template = \"\"\"\n",
     "<dl>\n",
-    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>Name</dt><dd>{Hotel_Name}</dd>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
     "</dl>\n",
@@ -857,77 +857,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-40985eaf88a4>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-40985eaf88a4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    info_box_template = <dl>\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bea583d996c4b79b1c61ea216539687",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# NOTE: Do not change any of the code in this cell\n",
+    "# Add markers to heat map\n",
+    "marker_layer = gmaps.marker_layer(\n",
+    "    locations, info_box_content = hotel_info)\n",
     "\n",
-    "# Using the template add the hotel marks to the heatmap\n",
-    "info_box_template = <dl>\n",
-    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
-    "</dl>\n",
-    "\n",
-    "# Store the DataFrame Row\n",
-    "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add marker layer ontop of heat map\n",
-    "\n",
-    "\n",
-    "# Display figure\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create bank symbol layer\n",
-    "bank_layer = gmaps.symbol_layer(\n",
-    "    locations, fill_color='rgba(0, 150, 0, 0.4)',\n",
-    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=2,\n",
-    "    info_box_content=[f\"Bank amount: {bank}\" for bank in bank_rate]\n",
-    ")\n",
-    "\n",
-    "\n",
-    "fig = gmaps.figure()\n",
-    "fig.add_layer(bank_layer)\n",
-    "\n",
+    "fig.add_layer(marker_layer)\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e03abd6c3e394571a9a17a2927948279",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create a combined map\n",
     "fig = gmaps.figure()\n",
     "\n",
     "fig.add_layer(heat_layer)\n",
-    "fig.add_layer(bank_layer)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "fig"
    ]
