--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2920,7 +2920,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2967,6 +2967,34 @@
    "source": [
     "Southern Hemisphere - Wind Speed (mph) vs. Latitude Linear Regression\n",
     "From this linear regression, there seems to be a negative correlation between latitude and wind speed in the souther hemisphere. Looking at the scatterplot we can see that a large majority of countries around the equator (latitude = 0) have very low wind speeds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observable Trends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 Maximum temperature vs. latitude in the northern hempisphere seem to have a strong negative correlation. At greater latitudes, the temperatures are lower and at lower latitudes, the temperatures are higher. A latitude of 0 is equal to the equator so this would make sense that the temperatures are high."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 Similarly, the latitude vs. temperature plot shows the same information. Countries with a latitude of 0 are on equator and have very warm climates. As countries move further and further away from the climate, their tempatures get significantly colder in comparison."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3 An interesting linear regression to look at would be that of wind speed vs. latitude in the northern hempisphere and wind speed vs. latitude in the southern hemisphere. For the plot with the southern hemisphere, there is no correlation; the trendline has a r-squred value of 5% meaning that wind speed and latitude in the southern hemisphere. When looking at the linear regression of wind speed vs. latitude in the northern hemisphere, there is a similar issue encountered; this regression also a very low r-squared value of 0.9%. From these linear regresssions, it can be concluded that there is no correlation between wind speed and latitude, in neither the southern hemisphere nor the northern hemisphere."
    ]
   }
  ],
